fixing overflow

--- a/src/App.css
+++ b/src/App.css
@@ -2,20 +2,20 @@ body {
   background-color: #f9f4ef;
   color: #8f7365 !important;
   font-family: 'Georgia', serif; /* Elegant and soft */
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   max-width: 100%;
 }
 
-* {
+/* * {
   box-sizing: border-box;
   max-width: 100vw;
 }
 
 html,
 body {
-  overflow-x: hidden; /* Prevent horizontal scrolling */
+  overflow-x: hidden; 
   max-width: 100%;
   height: 100%;
-  position: fixed; /* Prevent content shift */
-  overscroll-behavior: contain; /* Prevent extra scroll bounce */
-}
+  position: fixed; 
+  overscroll-behavior: contain; 
+} */
